--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -24,23 +24,6 @@
   }
 }
 
-.nav-sidebar {
-  padding-top: 20px;
-}
-
-.nav-sidebar > li > a {
-  padding-left: 10px;
-  color: #9da6ab;
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-}
-
-.nav-sidebar > li > a:hover, .nav-sidebar > li > a:focus{
-  padding-left: 20px;
-  color: #fff;
-  background: #84B908;
-}
 
 .nav-bottom {
   width: 100%;
@@ -63,11 +46,11 @@ i {
 
 a {
   text-decoration: none !important;
-  color: #84B908;
+  color: #fafafa;
 }
 
 a:hover {
-  color: #feb41c;
+  color: #fff;
 }
 
 span {
@@ -318,4 +301,35 @@ input[type='file'].form-control {
 
 .menu-container ul{
   list-style-type: none;
+}
+
+
+.btn-effets{
+    border-radius: 0;
+    position: relative;
+    color: #fff;
+    border:1px solid transparent;
+    text-transform: uppercase;
+    transition: all 0.40s ease 0s;
+}
+.btn-effets:after{
+    content: "\f019";
+    font-family: fontawesome;
+    position: absolute;
+    right: 6px;
+    top: -4px;
+    opacity: 0;
+    color: #fff;
+    transition: all 0.40s ease 0s;
+}
+.btn-effets:hover:after{
+    top:40%;
+    opacity: 5;
+}
+.btn-effets span{
+    display: block;
+    transition: all 0.70s linear 0s;
+}
+.btn-effets:hover span{
+    transform: translate(-9px);
 }
