--- a/public/views/index_admin.html
+++ b/public/views/index_admin.html
@@ -58,7 +58,9 @@
                             <ul class="collapse list-unstyled" id="pageSubmenu{{$index}}">
                                 <li><a href="/sakai/resource" ng-click="$root.cid = 123">Resource</a></li>
                                 <li><a href="/sakai/gradebook" ng-click="$root.cid = 123">GradeBook</a></li>
-                                <li><a href="#">Menu 3</a></li>
+                                <li><a href="/sakai/assignment" ng-click="$root.cid = 123">Assignment</a></li>
+                                <li><a href="/sakai/discussion" ng-click="$root.cid = 123">Discussion</a></li>
+                                <li><a href="/sakai/announcement" ng-click="$root.cid = 123">Announcements</a></li>
                             </ul>
                         </li>
 
@@ -102,6 +104,15 @@
 
     <script src="../js/controllers/admin/adminGradeBookController.js"></script>
     <script src="../js/services/admin/AdminGradeBookService.js"></script>
-</body>
 
+    <script src="../js/controllers/admin/adminAnnouncementController.js"></script>
+    <script src="../js/services/admin/AdminAnnouncementService.js"></script>
+
+    <script src="../js/controllers/admin/adminDiscussionController.js"></script>
+    <script src="../js/services/admin/AdminDiscussionService.js"></script>
+
+    <script src="../js/controllers/admin/adminAssignmentController.js"></script>
+    <script src="../js/services/admin/AdminAssignmentService.js"></script>
+
+</body>
 </html>
