--- a/public/views/partials/admin/gradebook.html
+++ b/public/views/partials/admin/gradebook.html
@@ -10,7 +10,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="grade in gradebook">
-                    <td>grade.grade</td>
+                    <td>grade.id</td>
                     <td>grade.title</td>
                     <td></td>
                 </tr>
