--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -1,5 +1,20 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
     <div class="main-content">
-      This is annoucement
+      
+      <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>File name</th>
+                    <th>File description</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="ann in announcement">
+                    <td>files.name</td>
+                    <td>files.description</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
