--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -4,15 +4,12 @@
       <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>File name</th>
-                    <th>File description</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="ann in announcement">
-                    <td>files.name</td>
-                    <td>files.description</td>
+                    <td><span ng-bind=""></span></td>
                 </tr>
             </tbody>
         </table>
