store cource id into cookie

--- a/public/views/index_admin.html
+++ b/public/views/index_admin.html
@@ -55,7 +55,7 @@
                             <a href="#pageSubmenu{{$index}}" class="head" data-toggle="collapse" aria-expanded="false">
                               <i class="fa fa-book"></i> <span ng-bind="course.TITLE"></span>                            </a>
                             <ul class="collapse list-unstyled" id="pageSubmenu{{$index}}">
-                                <li><a href="/sakai/resource" ng-click="$root.cid = 123">Resource</a></li>
+                                <li><a href="/sakai/resource" ng-click="setCid('123')">Resource</a></li>
                                 <li><a href="/sakai/gradebook" ng-click="$root.cid = 123">GradeBook</a></li>
                                 <li><a href="/sakai/assignment" ng-click="$root.cid = 123">Assignment</a></li>
                                 <li><a href="/sakai/discussion" ng-click="$root.cid = 123">Discussion</a></li>
