--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -1,17 +1,53 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
     <div class="main-content">
-      
-      <table class="table table-hover">
+        <table class="table table-hover">
             <thead>
                 <tr>
-                    <th></th>
+                    <th>Title</th>
+                    <th>Created by</th>
+                    <th>Date</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="ann in announcement">
-                    <td><span ng-bind=""></span></td>
+                <tr ng-repeat="announcement in announcements" ng-click="setAnnouncementId(announcement.ANNOUNCEMENT_ID)">
+                    <td ng-bind="announcement.TITLE"></td>
+                    <td ng-bind="announcement.NAME"></td>
+                    <td ng-bind="announcement.DATE_CREATED"></td>
+                    <td><a href="#" class="btn btn-effets btn-primary btn-sm"><span>Edit</span></a></td>
                 </tr>
             </tbody>
         </table>
+
+        <!---------- Announcement detail---------->
+        <div class="announcement-detail">
+            <ul>
+                <li>
+                    <span>Author:</span>
+                    <span ng-bind="announcement_detail.NAME"></span>
+                </li>
+                <li>
+                    <span>Title:</span>
+                    <span ng-bind="announcement_detail.TITLE"></span>
+                </li>
+                <li>
+                    <span>Content:</span>
+                    <span ng-bind="announcement_detail.CONTENT"></span>
+                </li>
+                <li>
+                    <span>Created at:</span>
+                    <span ng-bind="announcement_detail.DATE_CREATED"></span>
+                </li>
+                <li>
+                    <span>Attachments:</span>
+                    <ul>
+                        <li ng-repeat="attachment in announcement_attachment">
+                            <a href="attachment.URL" ng-bind="attachment.NAME"></a>
+                        </tr>
+                    </ul>
+                </li>
+                <a href="#" class="btn btn-effets btn-primary btn-sm"><span>Edit</span></a>
+            </ul>
+
+        </div>
     </div>
 </div>
