--- a/public/views/partials/admin/discussion.html
+++ b/public/views/partials/admin/discussion.html
@@ -1,5 +1,42 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
     <div class="main-content">
-      This is discussion
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Topic</th>
+                    <th>Created by</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="discussion in discussions" ng-click="setDiscussionId(discussion.DISCUSSION_ID)">
+                    <td ng-bind="discussion.TOPIC"></td>
+                    <td ng-bind="discussion.NAME"></td>
+                    <td ng-bind="discussion.DATE_CREATED"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!---------- Announcement detail---------->
+        <div class="discussion-detail">
+        	<div>Discussion detail</div>
+            <ul>
+            	<li ng-repeat="message in messages">
+                    <div> 
+                    	<span>Created by:</span>
+                    	<span ng-bind="message.NAME"></span>
+                    </div>       
+                    <div> 
+                    	<span>Created at:</span>
+                    	<span ng-bind="message.DATE_CREATED"></span>
+                    </div> 
+                    <div> 
+                    	<span>Content:</span>
+                    	<span ng-bind="message.CONTENT"></span>
+                    </div>                    
+                </li>
+            </ul>
+
+        </div>
     </div>
 </div>
