--- a/public/views/partials/admin/resource.html
+++ b/public/views/partials/admin/resource.html
@@ -21,8 +21,8 @@
                         <input ng-model="file.DESCRIPTION" />
                     </td>
                     <td><a href="{{file.attURL}}" target="_self" class="btn btn-effets btn-primary btn-sm" download="{{file.attNAME}}"><span>Download</span></a>
-                        <button class="btn btn-primary btn-sm" ng-click="editResource(file.RESOURCES_ID)" ng-if="editting == ''"><span>Edit</span></button>
-                        <button class="btn btn-primary btn-sm" ng-click="updateResource(file)" ng-if="file.RESOURCES_ID == editting"><span>Update</span></button>
+                            <button class="btn btn-primary btn-sm" ng-click="editResource(file.RESOURCES_ID)" ng-if="editting == ''"><span>Edit</span></button>
+                            <button class="btn btn-primary btn-sm" ng-click="updateResource(file)" ng-if="file.RESOURCES_ID == editting"><span>Update</span></button>
                         <button class="btn btn-primary btn-sm" ng-click="deleteResource(file.RESOURCES_ID)"><span>Delete</span></button>
                     </td>
                 </tr>
@@ -30,4 +30,41 @@
         </table>
         
     </div>
+        <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Create new resource
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel" style="font-weight: bold;">Create new resource</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="resource-form">
+                        <div class="form-group">
+                            <label for="resource-name" class="control-label">Resource name:</label>
+                            <input type="text" class="form-control" id="resource-name" ng-model="resource.NAME">
+                        </div>
+                        <div class="form-group">
+                            <label for="resource-desc" class="control-label">Resouce description:</label>
+                            <textarea class="form-control" id="resource-desc" ng-model="resource.DESCRIPTION"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="resource-file" class="control-label">Choose a resource file to upload</label>
+                            <input type="file" class="filestyle" data-icon="false" id="resource-file" class="custom-file-input">                        
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateResource(resource)">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
