đã fix add resource theo ý sếp

--- a/public/views/partials/admin/gradebook.html
+++ b/public/views/partials/admin/gradebook.html
@@ -1,5 +1,12 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
     <div class="main-content">
+
+        <div style="padding: 10px">
+        <h3>Bước 2:</h3>
+        <div id="drop">Kéo file vào đây</div>
+        <p style="margin-top: 10px;">Hoặc là chọn file<input class="form-control file-upload" type="file" name="xlfile" id="xlf" style="display: inline;" /></p>
+    </div>
+
         <table class="table table-hover">
             <thead>
                 <tr>
