--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -50,4 +50,41 @@
 
         </div>
     </div>
+
+        <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newAnnouncementModal">
+      Create new announcement
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="newAnnouncementModal" tabindex="-1" role="dialog" aria-labelledby="newAnnouncementModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="newAnnouncementModalLabel" style="font-weight: bold;">Create a new announcement</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="announcement-form">
+                        <div class="form-group">
+                            <label for="announcement-title" class="control-label">Title:</label>
+                            <input type="text" class="form-control" id="announcement-title" ng-model="announcement.TITLE">
+                        </div>
+                        <div class="form-group">
+                            <label for="announcement-content" class="control-label">Content:</label>
+                            <textarea class="form-control" id="announcement-content" ng-model="announcement.CONTENT"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="announcement-file" class="control-label">Choose a file to upload</label>
+                            <input type="file" class="filestyle" data-icon="false" id="announcement-file" class="custom-file-input">                        
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateAnnouncement(announcement)">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
