--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -87,4 +87,51 @@
 
         </div>
     </div>
+
+        <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newAssignmentModal">
+      Create new assignment
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="newAssignmentModal" tabindex="-1" role="dialog" aria-labelledby="newAssignmentModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="newAssignmentModalLabel" style="font-weight: bold;">Create a new assignment</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="assignment-form">
+                        <div class="form-group">
+                            <label for="assignment-title" class="control-label">Title:</label>
+                            <input type="text" class="form-control" id="assignment-title" ng-model="assignment.TITLE">
+                        </div>
+                        <div class="form-group">
+                            <label for="assignment-desc" class="control-label">Content:</label>
+                            <textarea class="form-control" id="assignment-desc" ng-model="assignment.DESCRIPTION"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="assignment-start-date" class="control-label">Start date:</label>
+                            <input type="datetime-local" class="form-control" id="assignment-start-date" ng-model="assignment.START_DATE">
+                        </div>
+                        <div class="form-group">
+                            <label for="assignment-due-date" class="control-label">Due date:</label>
+                            <input type="datetime-local" class="form-control" id="assignment-due-date" ng-model="assignment.DUE_DATE">
+                        </div>
+                        <div class="form-group">
+                            <label for="assignment-file" class="control-label">Choose a file to upload</label>
+                            <input type="file" class="filestyle" data-icon="false" id="assignment-file" class="custom-file-input">                        
+                        </div>
+                        
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateAssignment(assignment)">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
